WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32871
[Android] Android is missing implementation of NetworkStateNotifier.
https://bugs.webkit.org/show_bug.cgi?id=32871
Summary
[Android] Android is missing implementation of NetworkStateNotifier.
Andrei Popescu
Reported
2009-12-22 08:01:49 PST
Android doesn't currently support network state notifications. We need to add a platform hook into the NetworkStateNotifier class and have the hook be invoked by the Java side when the network state changes.
Attachments
Add Android hook to NetworkStateNotifier class
(3.31 KB, patch)
2009-12-22 08:11 PST
,
Andrei Popescu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2009-12-22 08:11:34 PST
Created
attachment 45386
[details]
Add Android hook to NetworkStateNotifier class
WebKit Review Bot
Comment 2
2009-12-22 08:14:52 PST
style-queue ran check-webkit-style on
attachment 45386
[details]
without any errors.
Adam Barth
Comment 3
2009-12-29 14:12:36 PST
Comment on
attachment 45386
[details]
Add Android hook to NetworkStateNotifier class ok
WebKit Commit Bot
Comment 4
2009-12-29 14:50:42 PST
Comment on
attachment 45386
[details]
Add Android hook to NetworkStateNotifier class Clearing flags on attachment: 45386 Committed
r52635
: <
http://trac.webkit.org/changeset/52635
>
WebKit Commit Bot
Comment 5
2009-12-29 14:50:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug