Update WebCore/platform/network with changes upstreamed in https://bugs.webkit.org/show_bug.cgi?id=32871 https://bugs.webkit.org/show_bug.cgi?id=32873

This will be submitted once the above changes land upstream.